--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+::-webkit-scrollbar {
+    width: 5px; /* for vertical scrollbar */
+    height: 5px; /* for horizontal scrollbar */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: hsl(24, 93%, 35%);
+    border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #030303;
+    border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-button { width: 20px; }
+  
